code/HADAD-base/src/main/java/hadad/base/compiler/model/nm/NumPyParser.java
// Generated from NumPy.g4 by ANTLR 4.4

package hadad.base.compiler.model.nm;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NumPyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__27=1, T__26=2, T__25=3, T__24=4, T__23=5, T__22=6, T__21=7, T__20=8, 
		T__19=9, T__18=10, T__17=11, T__16=12, T__15=13, T__14=14, T__13=15, T__12=16, 
		T__11=17, T__10=18, T__9=19, T__8=20, T__7=21, T__6=22, T__5=23, T__4=24, 
		T__3=25, T__2=26, T__1=27, T__0=28, ID=29, WHITESPACE=30, STRING=31, INT=32, 
		MATRIX=33, ROWS=34, COLS=35, READ=36;
	public static final String[] tokenNames = {
		"<INVALID>", "'.linalg.inv('", "'.power('", "'.trace('", "'.sd('", "'.subtract('", 
		"'.linalg.norm('", "'.transpose('", "'='", "'.divide('", "'.avg('", "'.amax('", 
		"'('", "','", "'.var('", "'axis=0'", "'.sum('", "'.multiply('", "'.linalg.det('", 
		"'.diag('", "'.amin('", "':'", "'.add('", "'.matmul('", "'axis=1'", "')'", 
		"'import numpy as'", "'.mean('", "'.linalg.matrix_rank('", "ID", "WHITESPACE", 
		"STRING", "INT", "MATRIX", "ROWS", "COLS", "READ"
	};
	public static final int
		RULE_numPyQuery = 0, RULE_importstatement = 1, RULE_numPyScript = 2, RULE_numPyStatemnet = 3, 
		RULE_source = 4, RULE_numPyMatrixConstruction = 5, RULE_numPyMatrixConstructionMatrixSource = 6, 
		RULE_load = 7, RULE_mName = 8, RULE_sep = 9, RULE_numPyExpression = 10, 
		RULE_viewName = 11, RULE_matrixName = 12, RULE_matrixNameExpression = 13, 
		RULE_numericScalar = 14, RULE_filePath = 15;
	public static final String[] ruleNames = {
		"numPyQuery", "importstatement", "numPyScript", "numPyStatemnet", "source", 
		"numPyMatrixConstruction", "numPyMatrixConstructionMatrixSource", "load", 
		"mName", "sep", "numPyExpression", "viewName", "matrixName", "matrixNameExpression", 
		"numericScalar", "filePath"
	};

	@Override
	public String getGrammarFileName() { return "NumPy.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NumPyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class NumPyQueryContext extends ParserRuleContext {
		public ViewNameContext viewName() {
			return getRuleContext(ViewNameContext.class,0);
		}
		public NumPyScriptContext numPyScript() {
			return getRuleContext(NumPyScriptContext.class,0);
		}
		public ImportstatementContext importstatement() {
			return getRuleContext(ImportstatementContext.class,0);
		}
		public NumPyQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numPyQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterNumPyQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitNumPyQuery(this);
		}
	}

	public final NumPyQueryContext numPyQuery() throws RecognitionException {
		NumPyQueryContext _localctx = new NumPyQueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_numPyQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32); viewName();
			setState(33); match(T__7);
			setState(34); importstatement();
			setState(35); numPyScript();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportstatementContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(NumPyParser.ID, 0); }
		public ImportstatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importstatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterImportstatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitImportstatement(this);
		}
	}

	public final ImportstatementContext importstatement() throws RecognitionException {
		ImportstatementContext _localctx = new ImportstatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importstatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37); match(T__2);
			setState(38); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumPyScriptContext extends ParserRuleContext {
		public List<NumPyStatemnetContext> numPyStatemnet() {
			return getRuleContexts(NumPyStatemnetContext.class);
		}
		public NumPyStatemnetContext numPyStatemnet(int i) {
			return getRuleContext(NumPyStatemnetContext.class,i);
		}
		public NumPyScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numPyScript; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterNumPyScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitNumPyScript(this);
		}
	}

	public final NumPyScriptContext numPyScript() throws RecognitionException {
		NumPyScriptContext _localctx = new NumPyScriptContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_numPyScript);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40); numPyStatemnet();
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(41); numPyStatemnet();
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumPyStatemnetContext extends ParserRuleContext {
		public SourceContext source() {
			return getRuleContext(SourceContext.class,0);
		}
		public MatrixNameContext matrixName() {
			return getRuleContext(MatrixNameContext.class,0);
		}
		public NumPyStatemnetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numPyStatemnet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterNumPyStatemnet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitNumPyStatemnet(this);
		}
	}

	public final NumPyStatemnetContext numPyStatemnet() throws RecognitionException {
		NumPyStatemnetContext _localctx = new NumPyStatemnetContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_numPyStatemnet);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47); matrixName();
			setState(48); match(T__20);
			setState(49); source();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SourceContext extends ParserRuleContext {
		public NumPyExpressionContext numPyExpression() {
			return getRuleContext(NumPyExpressionContext.class,0);
		}
		public NumPyMatrixConstructionContext numPyMatrixConstruction() {
			return getRuleContext(NumPyMatrixConstructionContext.class,0);
		}
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitSource(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_source);
		try {
			setState(53);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(51); numPyMatrixConstruction();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(52); numPyExpression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumPyMatrixConstructionContext extends ParserRuleContext {
		public NumPyMatrixConstructionMatrixSourceContext numPyMatrixConstructionMatrixSource() {
			return getRuleContext(NumPyMatrixConstructionMatrixSourceContext.class,0);
		}
		public NumPyMatrixConstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numPyMatrixConstruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterNumPyMatrixConstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitNumPyMatrixConstruction(this);
		}
	}

	public final NumPyMatrixConstructionContext numPyMatrixConstruction() throws RecognitionException {
		NumPyMatrixConstructionContext _localctx = new NumPyMatrixConstructionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_numPyMatrixConstruction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); numPyMatrixConstructionMatrixSource();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumPyMatrixConstructionMatrixSourceContext extends ParserRuleContext {
		public LoadContext load() {
			return getRuleContext(LoadContext.class,0);
		}
		public NumPyMatrixConstructionMatrixSourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numPyMatrixConstructionMatrixSource; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterNumPyMatrixConstructionMatrixSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitNumPyMatrixConstructionMatrixSource(this);
		}
	}

	public final NumPyMatrixConstructionMatrixSourceContext numPyMatrixConstructionMatrixSource() throws RecognitionException {
		NumPyMatrixConstructionMatrixSourceContext _localctx = new NumPyMatrixConstructionMatrixSourceContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_numPyMatrixConstructionMatrixSource);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57); load();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoadContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(NumPyParser.ID, 0); }
		public TerminalNode STRING() { return getToken(NumPyParser.STRING, 0); }
		public MNameContext mName() {
			return getRuleContext(MNameContext.class,0);
		}
		public SepContext sep() {
			return getRuleContext(SepContext.class,0);
		}
		public LoadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_load; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterLoad(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitLoad(this);
		}
	}

	public final LoadContext load() throws RecognitionException {
		LoadContext _localctx = new LoadContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_load);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59); match(ID);
			setState(60); match(T__16);
			setState(61); mName();
			setState(62); match(T__15);
			setState(63); sep();
			setState(64); match(T__20);
			setState(65); match(STRING);
			setState(66); match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MNameContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(NumPyParser.STRING, 0); }
		public MNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterMName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitMName(this);
		}
	}

	public final MNameContext mName() throws RecognitionException {
		MNameContext _localctx = new MNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_mName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68); match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SepContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(NumPyParser.ID, 0); }
		public SepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sep; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterSep(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitSep(this);
		}
	}

	public final SepContext sep() throws RecognitionException {
		SepContext _localctx = new SepContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sep);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumPyExpressionContext extends ParserRuleContext {
		public NumPyExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numPyExpression; }
	 
		public NumPyExpressionContext() { }
		public void copyFrom(NumPyExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ColumnsMaxExperssionContext extends NumPyExpressionContext {
		public Token op;
		public TerminalNode ID() { return getToken(NumPyParser.ID, 0); }
		public NumPyExpressionContext numPyExpression() {
			return getRuleContext(NumPyExpressionContext.class,0);
		}
		public ColumnsMaxExperssionContext(NumPyExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterColumnsMaxExperssion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitColumnsMaxExperssion(this);
		}
	}
	public static class RowsMeansExperssionContext extends NumPyExpressionContext {
		public Token op;
		public TerminalNode ID() { return getToken(NumPyParser.ID, 0); }
		public NumPyExpressionContext numPyExpression() {
			return getRuleContext(NumPyExpressionContext.class,0);
		}
		public RowsMeansExperssionContext(NumPyExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterRowsMeansExperssion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitRowsMeansExperssion(this);
		}
	}
	public static class VarExpressionContext extends NumPyExpressionContext {
		public TerminalNode ID() { return getToken(NumPyParser.ID, 0); }
		public NumPyExpressionContext numPyExpression() {
			return getRuleContext(NumPyExpressionContext.class,0);
		}
		public VarExpressionContext(NumPyExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterVarExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitVarExpression(this);
		}
	}
	public static class ColumnsSumExperssionContext extends NumPyExpressionContext {
		public Token op;
		public TerminalNode ID() { return getToken(NumPyParser.ID, 0); }
		public NumPyExpressionContext numPyExpression() {
			return getRuleContext(NumPyExpressionContext.class,0);
		}
		public ColumnsSumExperssionContext(NumPyExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterColumnsSumExperssion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitColumnsSumExperssion(this);
		}
	}
	public static class RowsMinExperssionContext extends NumPyExpressionContext {
		public Token op;
		public TerminalNode ID() { return getToken(NumPyParser.ID, 0); }
		public NumPyExpressionContext numPyExpression() {
			return getRuleContext(NumPyExpressionContext.class,0);
		}
		public RowsMinExperssionContext(NumPyExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterRowsMinExperssion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitRowsMinExperssion(this);
		}
	}
	public static class ColumnsVarExperssionContext extends NumPyExpressionContext {
		public Token op;
		public TerminalNode ID() { return getToken(NumPyParser.ID, 0); }
		public NumPyExpressionContext numPyExpression() {
			return getRuleContext(NumPyExpressionContext.class,0);
		}
		public ColumnsVarExperssionContext(NumPyExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterColumnsVarExperssion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitColumnsVarExperssion(this);
		}
	}
	public static class MatrixAddExpressionContext extends NumPyExpressionContext {
		public NumPyExpressionContext left;
		public Token op;
		public NumPyExpressionContext right;
		public TerminalNode ID() { return getToken(NumPyParser.ID, 0); }
		public List<NumPyExpressionContext> numPyExpression() {
			return getRuleContexts(NumPyExpressionContext.class);
		}
		public NumPyExpressionContext numPyExpression(int i) {
			return getRuleContext(NumPyExpressionContext.class,i);
		}
		public MatrixAddExpressionContext(NumPyExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterMatrixAddExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitMatrixAddExpression(this);
		}
	}
	public static class MatrixMulElementwiseExpressionContext extends NumPyExpressionContext {
		public NumPyExpressionContext left;
		public Token op;
		public NumPyExpressionContext right;
		public TerminalNode ID() { return getToken(NumPyParser.ID, 0); }
		public List<NumPyExpressionContext> numPyExpression() {
			return getRuleContexts(NumPyExpressionContext.class);
		}
		public NumPyExpressionContext numPyExpression(int i) {
			return getRuleContext(NumPyExpressionContext.class,i);
		}
		public MatrixMulElementwiseExpressionContext(NumPyExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterMatrixMulElementwiseExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitMatrixMulElementwiseExpression(this);
		}
	}
	public static class RowsSumExperssionContext extends NumPyExpressionContext {
		public Token op;
		public TerminalNode ID() { return getToken(NumPyParser.ID, 0); }
		public NumPyExpressionContext numPyExpression() {
			return getRuleContext(NumPyExpressionContext.class,0);
		}
		public RowsSumExperssionContext(NumPyExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterRowsSumExperssion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitRowsSumExperssion(this);
		}
	}
	public static class MatrixDetExpressionContext extends NumPyExpressionContext {
		public TerminalNode ID() { return getToken(NumPyParser.ID, 0); }
		public NumPyExpressionContext numPyExpression() {
			return getRuleContext(NumPyExpressionContext.class,0);
		}
		public MatrixDetExpressionContext(NumPyExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterMatrixDetExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitMatrixDetExpression(this);
		}
	}
	public static class MatrixMulExpressionContext extends NumPyExpressionContext {
		public NumPyExpressionContext left;
		public Token op;
		public NumPyExpressionContext right;
		public TerminalNode ID() { return getToken(NumPyParser.ID, 0); }
		public List<NumPyExpressionContext> numPyExpression() {
			return getRuleContexts(NumPyExpressionContext.class);
		}
		public NumPyExpressionContext numPyExpression(int i) {
			return getRuleContext(NumPyExpressionContext.class,i);
		}
		public MatrixMulExpressionContext(NumPyExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterMatrixMulExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitMatrixMulExpression(this);
		}
	}
	public static class MatrixDivisionContext extends NumPyExpressionContext {
		public NumPyExpressionContext left;
		public Token op;
		public NumPyExpressionContext right;
		public TerminalNode ID() { return getToken(NumPyParser.ID, 0); }
		public List<NumPyExpressionContext> numPyExpression() {
			return getRuleContexts(NumPyExpressionContext.class);
		}
		public NumPyExpressionContext numPyExpression(int i) {
			return getRuleContext(NumPyExpressionContext.class,i);
		}
		public MatrixDivisionContext(NumPyExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterMatrixDivision(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).exitMatrixDivision(this);
		}
	}
	public static class AvgExpressionContext extends NumPyExpressionContext {
		public TerminalNode ID() { return getToken(NumPyParser.ID, 0); }
		public NumPyExpressionContext numPyExpression() {
			return getRuleContext(NumPyExpressionContext.class,0);
		}
		public AvgExpressionContext(NumPyExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NumPyListener ) ((NumPyListener)listener).enterAvgExpression(this);
		}
		@Override
